tests/ui/typech/generic_function_call_unsatisfied_constraints.stderr
× error[LM4120]: type constraint not satisfied
   ╭─[generic_function_call_unsatisfied_constraints.lm:8:9]
 7 │ fn bar() {
 8 │     foo<Boolean>();
   ∶         ^^^^^^^ type Boolean does not implement A...
 9 │ }
   ∶
 4 │
 5 │ fn foo<T: A + B>() { }
   ∶           ^ ...which is required by the type parameter T
   ╰──
× error[LM4120]: type constraint not satisfied
   ╭─[generic_function_call_unsatisfied_constraints.lm:8:9]
 7 │ fn bar() {
 8 │     foo<Boolean>();
   ∶         ^^^^^^^ type Boolean does not implement B...
 9 │ }
   ∶
 4 │
 5 │ fn foo<T: A + B>() { }
   ∶               ^ ...which is required by the type parameter T
   ╰──