tests/ui/typech/generic_function_call_unsatisfied_constraints.lm
trait A {}

trait B {}

fn foo<T: A + B>() { }

fn bar() {
    foo<Boolean>();
}
